src/test/ui/const-generics/issues/issue-62504.stderr
error[E0308]: mismatched types
  --> $DIR/issue-62504.rs:18:21
   |
LL |         ArrayHolder([0; Self::SIZE])
   |                     ^^^^^^^^^^^^^^^ expected `X`, found `Self::SIZE`
   |
   = note: expected array `[u32; _]`
              found array `[u32; _]`

error: aborting due to previous error

For more information about this error, try `rustc --explain E0308`.
